fix: fix text overflow for cascader trigger
Apply suggestions from code review

--- a/packages/veui-theme-dls/components/input.less
+++ b/packages/veui-theme-dls/components/input.less
@@ -39,6 +39,8 @@
 
   &-before {
     padding-right: @dls-input-content-spacing;
+    flex: 0 1 auto;
+    overflow: hidden;
   }
 
   &-after {
