--- a/packages/veui-theme-dls/trigger.less
+++ b/packages/veui-theme-dls/trigger.less
@@ -92,6 +92,10 @@
     }
   }
 
+  &-custom-selected {
+    .ellipsis();
+  }
+
   &-wrap.@{veui-prefix}-input {
     display: block;
     min-width: 100%;
